src/objects/Client_Form__c.object
<CustomObject>
    <fields>
        <fullName>Addtl_Services_or_Assistance_Required__c</fullName>
        <inlineHelpText>Additional Services or Assistance Required:</inlineHelpText>
        <label>Add&apos;l services/assistance required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Forms</relationshipLabel>
        <relationshipName>Alternate_Contact_Client_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Dates__c</fullName>
        <inlineHelpText>Alternative Dates:</inlineHelpText>
        <label>Alternative Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Exports_As_Total_Sales__c</fullName>
        <label>Annual Exports (as % Total Sales)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 25%</fullName>
                </value>
                <value>
                    <fullName>More than 25%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_No_Years_Exporting__c</fullName>
        <inlineHelpText>Approximate No. Years Exporting:</inlineHelpText>
        <label>Approximate No. Years Exporting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Annual_Sales__c</fullName>
        <label>Average Annual Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than $5M</fullName>
                </value>
                <value>
                    <fullName>$5-$10M</fullName>
                </value>
                <value>
                    <fullName>More than $10M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Time_To_Complete_A_Sale__c</fullName>
        <inlineHelpText>From the time you (or your distributor) first meet a new end-user, on average, how long does it take to complete a sale?</inlineHelpText>
        <label>Average time to complete a sale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Time_To_Sign_New_Dist_Partner__c</fullName>
        <inlineHelpText>From the time you first meet a new marketing partner (distributor, agent, dealer, etc.), on average, how long does it take to sign a partner (distributor, agent, dealer, etc.) agreement?</inlineHelpText>
        <label>Average time to sign new dist./partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>&gt;2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Company_Description__c</fullName>
        <inlineHelpText>Brief Company Description</inlineHelpText>
        <label>Brief Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <inlineHelpText>Company Business Objective</inlineHelpText>
        <label>Business Objective(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Has_Rights_To_Export_Product__c</fullName>
        <inlineHelpText>Does your company produce or have rights to export the product/service?</inlineHelpText>
        <label>Client has rights to export product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Activities__c</fullName>
        <label>Company Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor/Representative</fullName>
                </value>
                <value>
                    <fullName>Educational Institution</fullName>
                </value>
                <value>
                    <fullName>Export Management Company</fullName>
                </value>
                <value>
                    <fullName>Franchiser</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Service Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Already_Represented_In_Market__c</fullName>
        <inlineHelpText>Is your company currently represented in this country/region?</inlineHelpText>
        <label>Company already represented in market?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Please certify your company size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_Exporting_To_Past_Present__c</fullName>
        <inlineHelpText>Countries Exporting To (past and present):</inlineHelpText>
        <label>Countries Exporting To (past/present)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_Of_Interest__c</fullName>
        <label>Country(ies) of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Rep_Dist_Aware_of_New_Search__c</fullName>
        <label>Current rep./dist. aware of new search?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Working_With_A_USEAC__c</fullName>
        <inlineHelpText>Are you currently working with a local U.S. Commercial Service Field Office?</inlineHelpText>
        <label>Currently working with a USEAC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Dates_for_Service__c</fullName>
        <inlineHelpText>Desired Dates for Service:</inlineHelpText>
        <label>Desired Dates for Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Locations__c</fullName>
        <label>Desired Location(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Qualities_Of_Target_Partners__c</fullName>
        <inlineHelpText>Describe any preferences, technical qualifications, servicing capabilities, requirements, or pre- qualifications that ideal prospects must have (i.e. size, geographic territory, investment, etc</inlineHelpText>
        <label>Desired qualities of target partners</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_And_International_Trade_Shows__c</fullName>
        <inlineHelpText>What are the domestic and international trade shows for your industry/company?</inlineHelpText>
        <label>Domestic and international trade shows</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exhibit_Shows__c</fullName>
        <inlineHelpText>Please indicate which shows do you exhibit at and/or walk?</inlineHelpText>
        <label>Shows client exhibits at and/or walks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Control_Classification_Number__c</fullName>
        <inlineHelpText>Please list the Export Control Classification Number (ECCN)</inlineHelpText>
        <label>Export Control Classification Nr.(ECCN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Firms_Persons_Not_To_Contact__c</fullName>
        <inlineHelpText>Are they any specific companies, or types of companies, you would like us NOT to contact</inlineHelpText>
        <label>Specific firms/persons NOT to contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firms_Persons_To_Contact__c</fullName>
        <inlineHelpText>Are there any specific companies, or types of companies, you would like us to contact? If so, please list them here.</inlineHelpText>
        <label>Specific firms/persons to contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hyperlinks_For_Marketing_Materials__c</fullName>
        <inlineHelpText>Please list here any hyperlinks for marketing materials (links to online .pdf brochures, online videos, etc.). If you prefer, please email any materials to your local contact along with this form.</inlineHelpText>
        <label>Hyperlinks for marketing materials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intl_Licenses_Registrations_Pending__c</fullName>
        <inlineHelpText>Are there any international licensing or registration requirements pending?</inlineHelpText>
        <label>Int&apos;l licenses/registrations pending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_This_Arrangement_Exclusive__c</fullName>
        <inlineHelpText>If yes, is this arrangement exclusive?</inlineHelpText>
        <label>If yes, is this arrangement exclusive?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Competitors_At_Home__c</fullName>
        <inlineHelpText>Who are your major competitors at home?</inlineHelpText>
        <label>Who are your major competitors at home?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Competitors_In_Target_Markets__c</fullName>
        <inlineHelpText>Who are your major competitors in the target market(s)?</inlineHelpText>
        <label>Major competitors in target market(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_Than_One_Distributor_Details__c</fullName>
        <inlineHelpText>If yes, does it depend on the geography, market size, or industry? Please explain briefly.</inlineHelpText>
        <label>If yes, using more than one dist. now?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>More_Than_One_Distributor__c</fullName>
        <label>Using/can use more than one distributor?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Important_End_Users__c</fullName>
        <inlineHelpText>Please list the most important end-users or end-user industries for this product/service</inlineHelpText>
        <label>Most important end-users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives_Interests_In_Target_Market__c</fullName>
        <inlineHelpText>Describe your company&apos;s interests and objectives in the target market or any special features of your company’s operations that can help us identify potential business partners.</inlineHelpText>
        <label>Objectives/interests in target market</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Forms</relationshipLabel>
        <relationshipName>Organization_Client_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Business_Contact__c</fullName>
        <inlineHelpText>Other business contact (please specify)</inlineHelpText>
        <label>Other business contact (please specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Company_Activities__c</fullName>
        <label>Other Company Activities(please specify)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_City__c</fullName>
        <description>Local partner city.</description>
        <inlineHelpText>Local partner city.</inlineHelpText>
        <label>Partner City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Company_Name__c</fullName>
        <description>Local partner company name.</description>
        <inlineHelpText>Local partner company name.</inlineHelpText>
        <label>Partner Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <description>Local partner contact email.</description>
        <inlineHelpText>Local partner contact email.</inlineHelpText>
        <label>Partner Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_First_Name__c</fullName>
        <description>Local partner contact first name.</description>
        <inlineHelpText>Local partner contact first name.</inlineHelpText>
        <label>Partner Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Last_Name__c</fullName>
        <description>Local partner contact last name.</description>
        <inlineHelpText>Local partner contact last name.</inlineHelpText>
        <label>Partner Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Telephone__c</fullName>
        <description>Local partner contact telephone.</description>
        <inlineHelpText>Local partner contact telephone.</inlineHelpText>
        <label>Partner Contact Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Title__c</fullName>
        <description>Local partner contact title.</description>
        <inlineHelpText>Local partner contact title.</inlineHelpText>
        <label>Partner Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <description>Local partner company country.</description>
        <inlineHelpText>Local partner company country.</inlineHelpText>
        <label>Partner Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Postal_Code__c</fullName>
        <description>Local partner company postal code.</description>
        <inlineHelpText>Local partner company postal code.</inlineHelpText>
        <label>Partner Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_State__c</fullName>
        <description>Local partner company state.</description>
        <inlineHelpText>Local partner company state.</inlineHelpText>
        <label>Partner State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Website__c</fullName>
        <description>Local partner company website.</description>
        <inlineHelpText>Local partner company website.</inlineHelpText>
        <label>Partner Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Forms</relationshipLabel>
        <relationshipName>Primary_Contact_Client_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_NAICs_Code__c</fullName>
        <label>Primary NAICs Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_License_Or_Registration_In_US__c</fullName>
        <inlineHelpText>What type of licensing or registration does your product/service require in the U.S. (i.e. FDA Approval)? Which requirements do you carry?</inlineHelpText>
        <label>Product license or registration in U.S</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_License_Registration_Outside_US__c</fullName>
        <inlineHelpText>What type of licensing or registration does your product/service require internationally (CE Mark, WEE, RoHS, CCC, GOST-R, FDA Classification, ASME, etc.)? Which requirements do you carry?</inlineHelpText>
        <label>Product license/registration outside US</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Services_Advantages_Description__c</fullName>
        <inlineHelpText>Describe the product/service(s) to be promoted, including its competitive advantages and unique selling proposition.</inlineHelpText>
        <label>Product/service(s) Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifies_As_US_Exporter__c</fullName>
        <inlineHelpText>Are you a U.S. exporter and is your product/service of U.S. origin or contain at least 51% U.S. content?</inlineHelpText>
        <label>Qualifies as U.S. exporter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Products_Handled_By_Distributor__c</fullName>
        <inlineHelpText>What related products might a representative/partner of this product/service also handle</inlineHelpText>
        <label>Related products handled by distributor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_BHS_Code__c</fullName>
        <inlineHelpText>Please list the Schedule B/HS Code (and corresponding product description)</inlineHelpText>
        <label>Please list the Schedule B/HS Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seeking_Exclusive_Representation__c</fullName>
        <inlineHelpText>Is your firm seeking representation on an exclusive basis in this market?</inlineHelpText>
        <label>Seeking exclusive representation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sectors_Served_Prioritized__c</fullName>
        <inlineHelpText>Please prioritize those sub-sectors that you want us to pursue.</inlineHelpText>
        <label>Sub-sectors served prioritized</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Sectors_Served__c</fullName>
        <inlineHelpText>Does your product/service serve a particular group of sub-sectors (i.e., industrial vs. commercial vs. residential for the building sector; oncology, ENT, orthopedic, etc. for the medical sector; coal, nuclear, gas, oil, etc. for the energy sector)?</inlineHelpText>
        <label>Sub-sectors served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Specialist_Name__c</fullName>
        <inlineHelpText>Trade Specialist (name):</inlineHelpText>
        <label>Trade Specialist (name)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_Of_Business_Contacts_Saught__c</fullName>
        <inlineHelpText>What type of business contacts are you seeking?</inlineHelpText>
        <label>Types of business contacts saught</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor/Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Agent/Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Franchisee</fullName>
                </value>
                <value>
                    <fullName>Joint Venture Partner/Licensee</fullName>
                </value>
                <value>
                    <fullName>End Users/Buyers</fullName>
                </value>
                <value>
                    <fullName>Additional In-Country Representation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_Dist_Marketing_Outside_US__c</fullName>
        <inlineHelpText>(If applicable) How is your product typically distributed and marketed outside of the U.S.</inlineHelpText>
        <label>Typical dist./marketing outside US</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_Distribution_Marketing_In_US__c</fullName>
        <inlineHelpText>How is your product typically distributed and marketed in the U.S.</inlineHelpText>
        <label>Typical distribution/marketing in US</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USEAC_Location__c</fullName>
        <description>U.S. Commercial Service Field Office location.</description>
        <inlineHelpText>U.S. Commercial Service Field Office location.</inlineHelpText>
        <label>If yes, USEAC location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Prod_Licenses_Registrations_Pending__c</fullName>
        <label>US Product license/registrations pending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Client Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Client Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Forms</pluralLabel>
    <recordTypes>
        <fullName>Exporter_Company_Questionnaire</fullName>
        <active>true</active>
        <description>Exporter Company Questionnaire record type</description>
        <label>Exporter Company Questionnaire</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>